--- a/settings.gradle
+++ b/settings.gradle
@@ -17,5 +17,6 @@
 rootProject.name = 'spring-android'
 
 include 'docs'
+include 'spring-android-core'
 include 'spring-android-auth'
 include 'spring-android-rest-template'
