--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,7 @@ configure(javaprojects) {
     javaxServletApiVersion = '2.5'
     commonsFileuploadVersion = '1.2'
     jettyVersion = '6.1.9'
-    jacksonVersion = '1.8.0'
+    jacksonVersion = '1.8.1'
     xmlUnitVersion = '1.3'
     
     // dependencies that are common across all java projects
@@ -194,7 +194,7 @@ project('spring-android-core') {
             'org/springframework/util/TypeUtils.java',
             ]
 
-        // loops through springframework jars, extracting and copying class files to the sharedSrcDir folder
+        // loops through springframework jars, extracting and copying jar files to the sharedSrcDir folder
         FileCollection sourceJars = configurations.explodedSourceFiles
         sourceJars.each { sourceJar ->
             zipTree(sourceJar).visit { sourceFile ->
@@ -343,7 +343,7 @@ project('spring-android-rest-template') {
             'org/springframework/web/util/UriUtils.java'
             ]
 
-        // loops through springframework jars, extracting and copying class files to the sharedSrcDir folder
+        // loops through springframework jars, extracting and copying jar files to the sharedSrcDir folder
         FileCollection sourceJars = configurations.explodedSourceFiles
         sourceJars.each { sourceJar ->
             zipTree(sourceJar).visit { sourceFile ->
