--- a/spring-android-auth-test/pom.xml
+++ b/spring-android-auth-test/pom.xml
@@ -20,7 +20,7 @@
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
 		<android-version>1.5_r3</android-version>
 		<spring-android-version>1.0.0.BUILD-SNAPSHOT</spring-android-version>
-		<spring-social-version>1.0.0.M3</spring-social-version>
+		<spring-social-version>1.0.0.BUILD-SNAPSHOT</spring-social-version>
 		<java-version>1.6</java-version>
 	</properties>
 
