--- a/build.gradle
+++ b/build.gradle
@@ -103,12 +103,13 @@ configure(javaprojects) {
     springSecurityVersion = '3.1.0.RC1'
     androidVersion = '1.5_r3'
     commonsHttpclientVersion = '3.1'
-    androidRomeVersion = '1.0.0-r2'
+    jacksonVersion = '1.8.1'
+	gsonVersion = '1.7.1'
     simpleXmlVersion = '2.5.3'
+    androidRomeVersion = '1.0.0-r2'
     javaxServletApiVersion = '2.5'
     commonsFileuploadVersion = '1.2'
     jettyVersion = '6.1.9'
-    jacksonVersion = '1.8.1'
     xmlUnitVersion = '1.3'
     
     // dependencies that are common across all java projects
@@ -253,12 +254,15 @@ project('spring-android-rest-template') {
         compile ("org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion") {
             optional = true
         }
-        compile ("com.google.code.android-rome-feed-reader:android-rome-feed-reader:$androidRomeVersion") { 
-            optional = true 
+        compile ("com.google.code.gson:gson:$gsonVersion") {
+            optional = true
         }
         compile ("org.simpleframework:simple-xml:$simpleXmlVersion") { 
             optional = true 
             transitive = false 
+        }
+        compile ("com.google.code.android-rome-feed-reader:android-rome-feed-reader:$androidRomeVersion") { 
+            optional = true 
         }
         compile ("commons-httpclient:commons-httpclient:$commonsHttpclientVersion") {
             optional = true
